--- a/index.html
+++ b/index.html
@@ -3,46 +3,74 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Suivi de mon chien – v1.8</title>
+<title>Suivi de mon chien – v1.9</title>
 
 <style>
-body { font-family: Arial; margin: 0; background: #D0E4F7; color: #1C2A40; }
-header { background: #2C5E99; color: #fff; text-align: center; padding: 15px; }
-nav { display: flex; background: #1C3B68; flex-wrap: wrap; }
+body { font-family: Arial, sans-serif; margin:0; background:#D0E4F7; color:#1C2A40; }
+header { background:#2C5E99; color:#fff; text-align:center; padding:15px; }
+
+nav { display:flex; background:#1C3B68; flex-wrap:wrap; }
 nav button {
-  flex: 1 1 25%;
-  padding: 12px;
-  background: #1C3B68;
-  color: white;
-  border: none;
-  font-size: 1rem;
+  flex:1 1 25%;
+  padding:12px;
+  background:#1C3B68;
+  color:#fff;
+  border:none;
+  font-size:1rem;
 }
 nav button.active {
-  background: #D0E4F7;
-  color: #1C3B68;
-  font-weight: bold;
+  background:#D0E4F7;
+  color:#1C3B68;
+  font-weight:bold;
 }
-section { display: none; padding: 20px; }
-section.active { display: block; }
-label { display: block; margin-top: 10px; font-weight: bold; }
+
+section { display:none; padding:20px; }
+section.active { display:block; }
+
+label { display:block; margin-top:10px; font-weight:bold; }
 input, textarea {
-  width: 100%;
-  padding: 8px;
-  margin-top: 4px;
-  border-radius: 4px;
-  border: 1px solid #587EA3;
-  background: #F0F8FF;
+  width:100%;
+  padding:8px;
+  margin-top:4px;
+  border-radius:4px;
+  border:1px solid #587EA3;
+  background:#F0F8FF;
+  font-size:1rem;
 }
+
+/* 🔠 FICHE : polices agrandies */
+#fiche label { font-size:1.1rem; }
+#fiche input,
+#fiche textarea {
+  font-size:1.15rem;
+  padding:10px;
+}
+
 button.action {
-  margin-top: 12px;
-  padding: 10px 15px;
-  background: #2C5E99;
-  color: white;
-  border: none;
-  border-radius: 5px;
+  margin-top:12px;
+  padding:10px 15px;
+  background:#2C5E99;
+  color:#fff;
+  border:none;
+  border-radius:5px;
+  font-size:1rem;
 }
-hr { margin: 20px 0; }
-a { color: #1C3B68; }
+
+/* 🔴 petit bouton supprimer */
+button.suppr {
+  background:#C0392B;
+  color:#fff;
+  border:none;
+  border-radius:4px;
+  padding:4px 8px;
+  font-size:0.8rem;
+  margin-top:6px;
+}
+button.suppr:active { background:#922B21; }
+
+hr { margin:18px 0; }
+a { color:#1C3B68; word-break:break-all; }
+.ligne { margin-bottom:10px; }
 </style>
 </head>
 
@@ -50,13 +78,11 @@ a { color: #1C3B68; }
 
 <header>
 Suivi de mon chien 🐾<br>
-<small>© Pierre Charlier 2025 — Version 1.8</small>
+<small>© Pierre Charlier 2025 — Version 1.9</small>
 </header>
 
 <nav>
 <button onclick="showTab('fiche')" class="active">Fiche</button>
-<button onclick="showTab('medicaments')">Médicaments</button>
-<button onclick="showTab('vaccins')">Vaccins</button>
 <button onclick="showTab('sante')">Santé</button>
 <button onclick="showTab('pdf')">Passeport PDF</button>
 <button onclick="showTab('liens')">Liens Web</button>
@@ -64,16 +90,19 @@ Suivi de mon chien 🐾<br>
 
 <main>
 
-<!-- FICHE -->
+<!-- ================= FICHE ================= -->
 <section id="fiche" class="active">
 <label>Puce</label><input id="puce">
 <label>Passeport</label><input id="passeport">
-<label>Date de naissance</label><input type="date" id="naissance" onchange="updateAge()">
+<label>Date de naissance</label>
+<input type="date" id="naissance" onchange="updateAge()">
 <div><strong>Âge :</strong> <span id="age">-</span></div>
-<label>Poids</label><input type="number" id="poids">
+
+<label>Poids (kg)</label><input type="number" id="poids">
 <label>Vétérinaire</label><input id="veto">
 <label>Téléphone</label><input id="tel">
 <label>Clinique</label><input id="clinique">
+
 <label>Nourriture</label><textarea id="nourriture"></textarea>
 <label>Accessoires</label><textarea id="accessoires"></textarea>
 <label>Autres</label><textarea id="autres"></textarea>
@@ -85,32 +114,16 @@ Suivi de mon chien 🐾<br>
 <button class="action" onclick="importInput.click()">📥 Importer</button>
 </section>
 
-<!-- MEDICAMENTS -->
-<section id="medicaments">
-<h3>Médicaments</h3>
-<div id="listeMeds"></div>
-<button class="action" onclick="ajouterMedicament()">+ Ajouter</button>
-</section>
-
-<!-- VACCINS -->
-<section id="vaccins">
-<h3>Vaccins</h3>
-<div id="listeVaccins"></div>
-<button class="action" onclick="ajouterVaccin()">+ Ajouter</button>
-</section>
-
-<!-- SANTE -->
+<!-- ================= SANTE ================= -->
 <section id="sante">
 <h3>Maladies</h3>
 <div id="listeMaladies"></div>
 <button class="action" onclick="ajouterMaladie()">+ Ajouter</button>
-
 <hr>
 
 <h3>Accidents</h3>
 <div id="listeAccidents"></div>
 <button class="action" onclick="ajouterAccident()">+ Ajouter</button>
-
 <hr>
 
 <h3>Traitements</h3>
@@ -118,7 +131,7 @@ Suivi de mon chien 🐾<br>
 <button class="action" onclick="ajouterTraitement()">+ Ajouter</button>
 </section>
 
-<!-- PDF -->
+<!-- ================= PDF ================= -->
 <section id="pdf">
 <h3>Passeport PDF</h3>
 <input type="file" id="pdfInput" accept="application/pdf">
@@ -126,18 +139,13 @@ Suivi de mon chien 🐾<br>
 <ul id="listePDF"></ul>
 </section>
 
-<!-- LIENS -->
+<!-- ================= LIENS ================= -->
 <section id="liens">
 <h3>Liens Web</h3>
-
-<div>
 <input id="nomLien" placeholder="Nom">
 <input id="urlLien" placeholder="URL (https://...)">
-<button class="action" onclick="enregistrerLien()">✔ Ajouter le lien</button>
-</div>
-
+<button class="action" onclick="ajouterLien()">+ Ajouter le lien</button>
 <hr>
-
 <div id="listeLiens"></div>
 </section>
 
@@ -145,11 +153,15 @@ Suivi de mon chien 🐾<br>
 
 <script>
 const données = {
-fiche:{}, meds:[], vaccins:[],
-maladies:[], accidents:[], traitements:[],
-pdfs:[], liens:[]
+  fiche:{},
+  maladies:[],
+  accidents:[],
+  traitements:[],
+  pdfs:[],
+  liens:[]
 };
 
+/* -------- Navigation -------- */
 function showTab(id){
 document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
 document.querySelectorAll("nav button").forEach(b=>b.classList.remove("active"));
@@ -157,12 +169,13 @@ document.getElementById(id).classList.add("active");
 event.target.classList.add("active");
 }
 
+/* -------- Fiche -------- */
 function updateAge(){
-if(!naissance.value){age.textContent="-";return;}
+if(!naissance.value){ age.textContent="-"; return; }
 const b=new Date(naissance.value), n=new Date();
 let a=n.getFullYear()-b.getFullYear();
-if(n.getMonth()<b.getMonth()||n.getMonth()==b.getMonth()&&n.getDate()<b.getDate())a--;
-age.textContent=a+" an"+(a>1?"s":"");
+if(n.getMonth()<b.getMonth() || (n.getMonth()==b.getMonth() && n.getDate()<b.getDate())) a--;
+age.textContent = a + " an" + (a>1?"s":"");
 }
 
 function saveData(){
@@ -185,98 +198,162 @@ URL.revokeObjectURL(a.href);
 }
 
 function importData(e){
-const f=e.target.files[0]; if(!f)return;
+const f=e.target.files[0]; if(!f) return;
 const r=new FileReader();
 r.onload=()=>{
 try{
-const j=JSON.parse(r.result);
-Object.assign(données,{
-fiche:j.fiche||{}, meds:j.meds||[], vaccins:j.vaccins||[],
-maladies:j.maladies||[], accidents:j.accidents||[],
-traitements:j.traitements||[], pdfs:j.pdfs||[], liens:j.liens||[]
-});
+Object.assign(données, JSON.parse(r.result));
 localStorage.setItem("chienData",JSON.stringify(données));
 location.reload();
-}catch{alert("❌ Fichier invalide");}
+}catch{ alert("❌ Fichier invalide"); }
 };
 r.readAsText(f);
 }
 
-/* ---- AJOUTS ---- */
-
-function ajouterMedicament(n="",d="",l=""){
-données.meds.push({nom:n,date:d,lien:l});
-listeMeds.innerHTML+=`<input value="${n}" placeholder="Nom">
-<input type="date" value="${d}">
-<input value="${l}" placeholder="Lien"><hr>`;
-}
-
-function ajouterVaccin(n="",d="",l=""){
-données.vaccins.push({nom:n,date:d,lien:l});
-listeVaccins.innerHTML+=`<input value="${n}">
-<input type="date" value="${d}">
-<input value="${l}"><hr>`;
-}
-
-function ajouterMaladie(n="",d="",r=""){
-données.maladies.push({nom:n,date:d,remarque:r});
-listeMaladies.innerHTML+=`<input value="${n}">
-<input type="date" value="${d}">
-<textarea>${r}</textarea><hr>`;
-}
-
-function ajouterAccident(t="",d="",s=""){
-données.accidents.push({type:t,date:d,suite:s});
-listeAccidents.innerHTML+=`<input value="${t}">
-<input type="date" value="${d}">
-<textarea>${s}</textarea><hr>`;
-}
-
-function ajouterTraitement(n="",db="",df="",p=""){
-données.traitements.push({nom:n,debut:db,fin:df,posologie:p});
-listeTraitements.innerHTML+=`<input value="${n}">
-<input type="date" value="${db}">
-<input type="date" value="${df}">
-<textarea>${p}</textarea><hr>`;
-}
-
-function ajouterPDF(){
-if(pdfInput.files[0]){
-données.pdfs.push(pdfInput.files[0].name);
-listePDF.innerHTML+=`<li>${pdfInput.files[0].name}</li>`;
-}
-}
-
-/* ---- LIENS WEB (CORRIGÉ) ---- */
-
-function enregistrerLien(){
+/* -------- Liens Web -------- */
+function ajouterLien(){
 if(!urlLien.value) return;
-données.liens.push({nom:nomLien.value||urlLien.value,url:urlLien.value});
+données.liens.push({nom:nomLien.value||urlLien.value, url:urlLien.value});
 nomLien.value=""; urlLien.value="";
 afficherLiens();
+saveData();
+}
+
+function supprimerLien(i){
+données.liens.splice(i,1);
+afficherLiens();
+saveData();
 }
 
 function afficherLiens(){
 listeLiens.innerHTML="";
-données.liens.forEach(l=>{
-listeLiens.innerHTML+=`<strong>${l.nom}</strong><br>
-<a href="${l.url}" target="_blank">${l.url}</a><hr>`;
+données.liens.forEach((l,i)=>{
+listeLiens.innerHTML+=`
+<div class="ligne">
+<strong>${l.nom}</strong><br>
+<a href="${l.url}" target="_blank">${l.url}</a><br>
+<button class="suppr" onclick="supprimerLien(${i})">Supprimer</button>
+<hr>
+</div>`;
 });
 }
 
+/* -------- PDF -------- */
+function ajouterPDF(){
+const f=pdfInput.files[0]; if(!f) return;
+const url=URL.createObjectURL(f);
+données.pdfs.push({nom:f.name, url});
+afficherPDFs();
+saveData();
+}
+
+function supprimerPDF(i){
+données.pdfs.splice(i,1);
+afficherPDFs();
+saveData();
+}
+
+function afficherPDFs(){
+listePDF.innerHTML="";
+données.pdfs.forEach((p,i)=>{
+listePDF.innerHTML+=`
+<li>
+<a href="${p.url}" target="_blank">📄 ${p.nom}</a>
+<br>
+<button class="suppr" onclick="supprimerPDF(${i})">Supprimer</button>
+</li>`;
+});
+}
+
+/* -------- Santé -------- */
+function ajouterMaladie(){
+données.maladies.push({nom:"",date:"",remarque:""});
+afficherMaladies();
+saveData();
+}
+
+function supprimerMaladie(i){
+données.maladies.splice(i,1);
+afficherMaladies();
+saveData();
+}
+
+function afficherMaladies(){
+listeMaladies.innerHTML="";
+données.maladies.forEach((m,i)=>{
+listeMaladies.innerHTML+=`
+<input placeholder="Maladie" value="${m.nom}">
+<input type="date" value="${m.date}">
+<textarea>${m.remarque}</textarea>
+<button class="suppr" onclick="supprimerMaladie(${i})">Supprimer</button>
+<hr>`;
+});
+}
+
+function ajouterAccident(){
+données.accidents.push({type:"",date:"",suite:""});
+afficherAccidents();
+saveData();
+}
+
+function supprimerAccident(i){
+données.accidents.splice(i,1);
+afficherAccidents();
+saveData();
+}
+
+function afficherAccidents(){
+listeAccidents.innerHTML="";
+données.accidents.forEach((a,i)=>{
+listeAccidents.innerHTML+=`
+<input placeholder="Accident" value="${a.type}">
+<input type="date" value="${a.date}">
+<textarea>${a.suite}</textarea>
+<button class="suppr" onclick="supprimerAccident(${i})">Supprimer</button>
+<hr>`;
+});
+}
+
+function ajouterTraitement(){
+données.traitements.push({nom:"",debut:"",fin:"",posologie:""});
+afficherTraitements();
+saveData();
+}
+
+function supprimerTraitement(i){
+données.traitements.splice(i,1);
+afficherTraitements();
+saveData();
+}
+
+function afficherTraitements(){
+listeTraitements.innerHTML="";
+données.traitements.forEach((t,i)=>{
+listeTraitements.innerHTML+=`
+<input placeholder="Traitement" value="${t.nom}">
+<input type="date" value="${t.debut}">
+<input type="date" value="${t.fin}">
+<textarea>${t.posologie}</textarea>
+<button class="suppr" onclick="supprimerTraitement(${i})">Supprimer</button>
+<hr>`;
+});
+}
+
+/* -------- Restauration -------- */
 window.onload=()=>{
 const s=JSON.parse(localStorage.getItem("chienData")||"{}");
-if(!s.fiche)return;
+if(!s.fiche) return;
 Object.assign(données,s);
-Object.entries(données.fiche).forEach(([k,v])=>document.getElementById(k).value=v||"");
+Object.entries(données.fiche).forEach(([k,v])=>{
+const el=document.getElementById(k);
+if(el) el.value=v||"";
+});
 updateAge();
-données.meds.forEach(m=>ajouterMedicament(m.nom,m.date,m.lien));
-données.vaccins.forEach(v=>ajouterVaccin(v.nom,v.date,v.lien));
-données.maladies.forEach(m=>ajouterMaladie(m.nom,m.date,m.remarque));
-données.accidents.forEach(a=>ajouterAccident(a.type,a.date,a.suite));
-données.traitements.forEach(t=>ajouterTraitement(t.nom,t.debut,t.fin,t.posologie));
-données.pdfs.forEach(p=>listePDF.innerHTML+=`<li>${p}</li>`);
 afficherLiens();
+afficherPDFs();
+afficherMaladies();
+afficherAccidents();
+afficherTraitements();
 };
 </script>
 
